[package]
name = "tlock-worker"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
drand_core = "0.0.7"
hex = "0.4.3"
serde_json = "1.0.67"
tlock_age = { version = "0.0.2", features = ["armor"] }
worker = "0.0.11"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
