[package]
name = "tlock-worker"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
drand_core = { version = "0.0.15", default-features = false}
tlock_age = { version = "0.0.5", features = ["armor"] }
worker = "0.0.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
